import("//build/common.gni")
 

component("log4z") {
  configs += [ "//build/config:precompiled_headers" ]

  sources = [
    #include files  
    "log4z.h",
  
    #source files 
    "log4z.cpp",
  ]

  include_dirs = [
    ".",
    "../../config",
    "../../utilities/include",
    "../../SOUI/include",
  ]

  deps = [ 
    "../../third-part/zlib",
    "../../third-part/png",
  ]

  if (is_component_build) {
     sources += [ "log4z.rc",]
  }

  defines = ["_CRT_SECURE_NO_WARNINGS",] 

} 