import("//build_overrides/common.gni")
 
executable("360") {
  configs += [ "//build/config:precompiled_headers" ]

  configs -= [ "//build/config/win:console" ]
  configs += [ "//build/config/win:windowed" ] 
  
  sources = [
    #include files  
    "MainDlg.h",
    "resource.h",
    "sanimimg.h",
    "stabctrl2.h",

    #"LunarCalendar.h",
    #"LunarCalendar.cpp",
    
    #"SCalendar.h",
    #"SCalendar.cpp",

    "SDateTimeEdit.h",
    "SDateTimeEdit.cpp",
    
    "360.cpp",
    "MainDlg.cpp",
    "sanimimg.cpp",
    "stabctrl2.cpp",
    
    "360.rc",
    
  ]

  include_dirs = [
    ".",
    "../../config",
    "../../soui/include",
    "../../utilities/include",
    "../../components",
  ]

  deps = [ 
    "../../utilities",
    "../../SOUI",
    "../../third-part",
    "../../components",
    "../../soui-sys-resource",
    "../../../:preBuild_360_resource",
  ]


  if (is_win) {
    cflags = [
      #"/W3",  # Warning level 3.
      "/wd4201",
      "/wd4239",
    ]
  }
 
  defines = ["_CRT_SECURE_NO_WARNINGS","_USE_UI_LIBRAY",] 

} 